# netbox-dns

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: RELEASE-TEMPLATE.md
.github/workflows/: black.yml  publish.yml  release.yml  test-nb-3.0.x.yml  test.yml
docs/: using_netbox_dns.md  using_netbox_dns_with_ansible.md
examples/ansible/: using_netbox_dns_with_ansible.md
examples/custom-scripts/: DNS_IPAM_Updater.py  netbox_dns_exporters.py  using_custom_scripts.md
media/: configuration.testing.py
netbox_dns/: __init__.py  admin.py  apps.py  fields.py  filters.py  forms.py  icon_classes.py  models.py  navigation.py  tables.py  template_content.py  urls.py  utilities.py  validators.py  views.py
netbox_dns/api/: nested_serializers.py  serializers.py  urls.py  views.py
netbox_dns/core/: test.py
netbox_dns/fields/: __init__.py  address.py  network.py
netbox_dns/filters/: __init__.py  nameserver.py  record.py  view.py  zone.py
netbox_dns/forms/: nameserver.py  record.py  view.py  zone.py
netbox_dns/graphql/: __init__.py  nameserver.py  record.py  schema.py  view.py  zone.py
netbox_dns/migrations/: 0001_initial.py  0001_squashed_netbox_dns_0_15.py  0002_auto_20210917_1301.py  0002_auto_20211014_1357.py  0002_auto_20211016_0913.py  0002_auto_20211018_0821.py  0002_zone_default_ttl.py  0003_soa_managed_records.py  0003_zone_new_fields.py  0004_create_ptr_for_a_aaaa_records.py  0005_update_ns_records.py  0006_zone_soa_serial_auto.py  0007_alter_zone_soa_serial_auto.py  0008_zone_status_names.py  0009_netbox32.py  (+18 more)
(+62 files in other folders)
