[tool.poetry]
name = "netbox-dns"
version = "0.1.0"
description = ""
authors = ["Aurora Research Lab <info@aurorabilisim.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
