[tool.poetry]
name = "netbox-dns"
version = "0.13.0"
description = "Netbox Dns is a netbox plugin for managing zone, nameserver and record inventory."
readme = "README.md"
homepage = "https://github.com/auroraresearchlab/netbox-dns"
repository = "https://github.com/auroraresearchlab/netbox-dns"
authors = ["Aurora Research Lab <info@auroraresearchlab.com>"]
license = "MIT"
include = ["netbox_dns/templates/*"]
exclude = ["netbox_dns/tests/*"]
keywords = ["netbox", "netbox-plugin", "dns"]

[tool.poetry.dependencies]
python = "^3.8"
dnspython = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = { version = "^21.8b0", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
